ajout du css de la page historique

--- a/Prototype 1/public/app.css
+++ b/Prototype 1/public/app.css
@@ -1,3 +1,17 @@
+.Historique-Calendrier {
+    position:absolute;
+    top: 0;
+    left: 0; /* Adjust to position it correctly */
+    width: 100%;
+    height: 100%;
+    transition: left 0.5s ease;
+    z-index: 0;
+}
+
+.Historique-Calendrier.show {
+    left: -1%; /* Move it off-screen to the left when hidden */
+}
+
 .Chercher-Exercice {
     position: absolute;
     top: 0;
